<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/textViewFullname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/materialButtonOutputFullname"
        app:layout_constraintStart_toStartOf="@+id/materialButtonOutputFullname"
        app:layout_constraintTop_toBottomOf="@+id/materialButtonOutputFullname" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButtonOutputFullname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/output_fullname"
        app:layout_constraintEnd_toEndOf="@+id/editTextPersonSurname"
        app:layout_constraintStart_toStartOf="@+id/editTextPersonSurname"
        app:layout_constraintTop_toBottomOf="@+id/editTextPersonSurname" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextPersonNme"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPersonNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextPersonSurname"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextPersonNme"
        app:layout_constraintStart_toStartOf="@+id/editTextPersonNme"
        app:layout_constraintTop_toBottomOf="@+id/editTextPersonNme">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPersonSurnameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surname" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>